@@ -1642,16 +1642,18 @@
       Refer to the <a href="http://www.freescale.com/webapp/sps/site/prod_summary.jsp?code=KWIKSTIK-K40">Freescale web site</a> for further information about this board.
       The Kwikstik is used with the FreeScale Tower System (mostly just to provide a simple UART connection)
     </p>
-    <p>
-      <b>STATUS:</b>
-      The unverified KwikStik K40 first appeared in NuttX-6.8
-      As of this writing, the basic port is complete but I accidentally locked my board during the initial bringup.
-      Further development is stalled unless I learn how to unlock the device (or until I get another K40).
-      Additional work remaining includes, among other things: (1) complete the basic bring-up,
-      (2) bring up the NuttShell NSH, (3) develop support for the SDHC-based SD card,
-      (4) develop support for USB host and device, and (2) develop an LCD driver.
-      NOTE: Some of these remaining tasks are shared with the K60 work described below.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        The unverified KwikStik K40 first appeared in NuttX-6.8
+        As of this writing, the basic port is complete but I accidentally locked my board during the initial bringup.
+        Further development is stalled unless I learn how to unlock the device (or until I get another K40).
+        Additional work remaining includes, among other things: (1) complete the basic bring-up,
+        (2) bring up the NuttShell NSH, (3) develop support for the SDHC-based SD card,
+        (4) develop support for USB host and device, and (2) develop an LCD driver.
+        NOTE: Some of these remaining tasks are shared with the K60 work described below.
+      </p>
+    </ul>
   </td>
 </tr>
 <tr>
@@ -1667,18 +1669,20 @@
       Refer to the <a href="http://www.freescale.com/webapp/sps/site/prod_summary.jsp?code=TWR-K60N512-KIT">Freescale web site</a> for further information about this board.
       The TWR-K60N51 includes with the FreeScale Tower System which provides (among other things) a DBP UART connection.
     </p>
-    <p>
-      <b>STATUS:</b>
-      As of this writing, the basic port is complete and passes the NuttX OS test.
-      An additional, validated configuration exists for the NuttShell (NSH, see the
-      <a href="http://www.nuttx.org/NuttShell.html">NSH User Guide</a>).
-      This basic TWR-K60N512 first appeared in NuttX-6.8.
-      Ethernet and SD card (SDHC) drivers also exist:
-      The SDHC driver is partially integrated in to the NSH configuration but has some outstanding issues;
-      the Ethernet driver is completely untested.
-      Additional work remaining includes: (1) integrate the Ethernet and SDHC drivers, and (2) develop support for USB host and device.
-      NOTE: Most of these remaining tasks (excluding the Ethernet driver) are the same as the pending K40 tasks described above.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        As of this writing, the basic port is complete and passes the NuttX OS test.
+        An additional, validated configuration exists for the NuttShell (NSH, see the
+        <a href="http://www.nuttx.org/NuttShell.html">NSH User Guide</a>).
+        This basic TWR-K60N512 first appeared in NuttX-6.8.
+        Ethernet and SD card (SDHC) drivers also exist:
+        The SDHC driver is partially integrated in to the NSH configuration but has some outstanding issues;
+        the Ethernet driver is completely untested.
+        Additional work remaining includes: (1) integrate the Ethernet and SDHC drivers, and (2) develop support for USB host and device.
+        NOTE: Most of these remaining tasks (excluding the Ethernet driver) are the same as the pending K40 tasks described above.
+      </p>
+    </ul>
   </td>
 </tr>
 <tr>
@@ -1693,18 +1697,20 @@
       This port uses the Freescale STMicro STM3240G-EVAL board featuring the STM32F407IGH6 MCU.
       Refer to the <a href="http://www.st.com/internet/evalboard/product/252216.jsp">STMicro web site</a> for further information about this board.
     </p>
-    <p>
-      <b>STATUS:</b>
-      As of this writing, the basic port is complete and first appeared in NuttX-6.12.
-      The port passes the NuttX OS test and includes a validated configuration for the NuttShell (NSH, see the
-      <a href="http://www.nuttx.org/NuttShell.html">NSH User Guide</a>).
-      Additional drivers and configurations were added in NuttX 6.13.
-      Drivers include an Ethernet driver, ADC driver, DAC driver, PWM driver, CAN driver, F4 RTC driver
-      (most of these are compatible with the F1 family as well).
-      That release also included F4 DMA support and logic for saving/restoring F4 FPU registers in context switches.
-      Networking intensions include support for Telnet NSH sessions and new configurations for DHPCD and the networking test (nettest).
-      A more complete port would include support for SDIO and USB OTG which are not available in NuttX 6.13.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        As of this writing, the basic port is complete and first appeared in NuttX-6.12.
+        The port passes the NuttX OS test and includes a validated configuration for the NuttShell (NSH, see the
+        <a href="http://www.nuttx.org/NuttShell.html">NSH User Guide</a>).
+        Additional drivers and configurations were added in NuttX 6.13.
+        Drivers include an Ethernet driver, ADC driver, DAC driver, PWM driver, CAN driver, F4 RTC driver
+        (most of these are compatible with the F1 family as well).
+        That release also included F4 DMA support and logic for saving/restoring F4 FPU registers in context switches.
+        Networking intensions include support for Telnet NSH sessions and new configurations for DHPCD and the networking test (nettest).
+        A more complete port would include support for SDIO and USB OTG which are not available in NuttX 6.13.
+      </p>
+    </ul>
   </td>
 </tr>
 <tr>
@@ -1720,11 +1726,13 @@
       It will used the STMicor STM32F4-Discovery board featuring the STM32F407VGT6 MCU.
       Refer to the <a href="http://www.st.com/internet/evalboard/product/252419.jsp">STMicro web site</a> for further information about this board.
     </p>
-    <p>
-      <b>STATUS:</b>
-      This is really a vapor ware, pre-announcement.
-      I have the hardware and the motivation and I expect to announce the availability of support the STM32F4-Discovery in a later NuttX release.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        This is really a vapor ware, pre-announcement.
+        I have the hardware and the motivation and I expect to announce the availability of support the STM32F4-Discovery in a later NuttX release.
+      </p>
+    </ul>
   </td>
 </tr>
 <tr>
@@ -1738,7 +1746,7 @@
     <b>Development Environments:</b>
     1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU Cortex-M3 or 4toolchain, or 3) Cygwin with Windows native GNU Cortex-M3 or M4 toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux or Cygwin is provided by the NuttX
     <a href="http://sourceforge.net/projects/nuttx/files/buildroot/">buildroot</a> package.
-    I use FreeScale's <i>CodeWarrior</i> IDE only to work with the JTAG debugger built into the boards.
+    I use FreeScale's <i>CodeWarrior</i> IDE only to work with the JTAG debugger built into the Kinetis boards.
   </p>
   </td>
 </tr>
